<resources>
    <string name="app_name">Android Academy</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="back_btn_txt">Back</string>
    <string name="txt13">13+</string>
    <string name="film_title">Avengers:\nEnd Game</string>
    <string name="genre">Action, Adventure, Fantasy</string>
    <string name="num_of_views">125</string>
    <string name="reviews_txt">REVIEWS</string>
    <string name="storyline_txt">Storyline</string>
    <string name="storyline_context">After the devastating
        events of Avengers: Infinity War, the universe is in
        ruins. With the help of remaining allies, the Avengers
        assemble once more in order to reverse Thanos\' actions
        and restore balance to the universe.</string>
    <string name="cast_txt">Cast</string>
    <string name="robert">Robert Downey Jr.</string>
    <string name="chris_e">Chris Evans</string>
    <string name="mark">Mark Ruffalo</string>
    <string name="chris_h">Chris Hemsworth</string>
    <string name="moovie">Moovie!!!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies_list">Movies list</string>
    <string name="avengers_end_game">Avengers: End Game</string>
    <string name="movie_duration">137 MIN</string>
</resources>